--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://localhost:8443/bin/franklin.delivery/Seema99/EDSUETraining/main"
+    url: "https://author-p24103-e71623.adobeaemcloud.com/bin/franklin.delivery/Seema99/EDSUETraining/main"
     type: "markup"
     suffix: ".html"
